# eyes_to_read

./: .gitignore  README.md
eyes_to_read_be/: pyproject.toml
eyes_to_read_be/eyes_to_read_be/: __main__.py  main.py
eyes_to_read_be/eyes_to_read_be/common/: auth.py  config.py  jwttoken.py  models.py  oauth.py
eyes_to_read_be/eyes_to_read_be/routes/: user_routes.py
eyes_to_read_fe/: package-lock.json  package.json
eyes_to_read_fe/pages/: index.js
eyes_to_read_fe/src/app/: page.js
eyes_to_see_fe/: .gitignore  package-lock.json  package.json
eyes_to_see_fe/app/: page.js
eyes_to_see_fe/components/: SignIn.js
eyes_to_see_fe/pages/: index.js
