[tool.poetry]
name = "eyes-to-read-be"
version = "0.1.0"
description = ""
authors = ["shoham <shohamyech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
pymongo = "^4.5.0"
uvicorn = "^0.23.2"
jwt = "^1.3.1"
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
