[tool.poetry]
name = "eyes-to-read-be"
version = "0.1.0"
description = ""
authors = ["shoham <shohamyech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
pymongo = "^4.5.0"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
djangorestframework = "^3.14.0"
passlib = "^1.7.4"
cryptography = "^41.0.4"
openpyxl = "^3.1.2"
python-jose = "^3.3.0"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
